--- a/css/theme/orange.css
+++ b/css/theme/orange.css
@@ -9,7 +9,6 @@
  * For other themes, change $codeBackground accordingly.
  *
  */
-@import url(https://fonts.googleapis.com/css?family=Ubuntu:300,700,300italic,700italic);
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
@@ -24,7 +23,7 @@ body {
   background-color: #2b2b2b; }
 
 .reveal {
-  font-family: Ubuntu, "sans-serif";
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 36px;
   font-weight: normal;
   letter-spacing: -0.02em;
@@ -32,7 +31,7 @@ body {
 
 ::selection {
   color: #fff;
-  background: #a23;
+  background: #ff6600;
   text-shadow: none; }
 
 /*********************************************
@@ -46,7 +45,7 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #ff6600;
-  font-family: Ubuntu, "sans-serif";
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   line-height: 0.9em;
   letter-spacing: 0.02em;
   text-transform: lowercase;
@@ -59,7 +58,7 @@ body {
  * LINKS
  *********************************************/
 .reveal a:not(.image) {
-  color: #a23;
+  color: #ff6600;
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
@@ -68,13 +67,13 @@ body {
   transition: color .15s ease; }
 
 .reveal a:not(.image):hover {
-  color: #dd5566;
+  color: #ffa366;
   text-shadow: none;
   border: none; }
 
 .reveal .roll span:after {
   color: #fff;
-  background: #6a1520; }
+  background: #b34700; }
 
 /*********************************************
  * IMAGES
@@ -92,7 +91,7 @@ body {
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: #a23;
+  border-color: #ff6600;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
@@ -100,31 +99,31 @@ body {
  *********************************************/
 .reveal .controls div.navigate-left,
 .reveal .controls div.navigate-left.enabled {
-  border-right-color: #a23; }
+  border-right-color: #ff6600; }
 
 .reveal .controls div.navigate-right,
 .reveal .controls div.navigate-right.enabled {
-  border-left-color: #a23; }
+  border-left-color: #ff6600; }
 
 .reveal .controls div.navigate-up,
 .reveal .controls div.navigate-up.enabled {
-  border-bottom-color: #a23; }
+  border-bottom-color: #ff6600; }
 
 .reveal .controls div.navigate-down,
 .reveal .controls div.navigate-down.enabled {
-  border-top-color: #a23; }
+  border-top-color: #ff6600; }
 
 .reveal .controls div.navigate-left.enabled:hover {
-  border-right-color: #dd5566; }
+  border-right-color: #ffa366; }
 
 .reveal .controls div.navigate-right.enabled:hover {
-  border-left-color: #dd5566; }
+  border-left-color: #ffa366; }
 
 .reveal .controls div.navigate-up.enabled:hover {
-  border-bottom-color: #dd5566; }
+  border-bottom-color: #ffa366; }
 
 .reveal .controls div.navigate-down.enabled:hover {
-  border-top-color: #dd5566; }
+  border-top-color: #ffa366; }
 
 /*********************************************
  * PROGRESS BAR
@@ -133,7 +132,7 @@ body {
   background: rgba(0, 0, 0, 0.2); }
 
 .reveal .progress span {
-  background: #a23;
+  background: #ff6600;
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -ms-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
@@ -144,7 +143,7 @@ body {
  * SLIDE NUMBER
  *********************************************/
 .reveal .slide-number {
-  color: #a23; }
+  color: #ff6600; }
 
 .reveal p {
   font-weight: 300;
@@ -174,4 +173,105 @@ body {
 .reveal small code {
   vertical-align: baseline; }
 
-/*# sourceMappingURL=blood.css.map */
+.slides section h1, .slides section h2, .slides section h3 {
+  text-transform: lowercase;
+  line-height: 1.4;
+  letter-spacing: 2px;
+  word-spacing: 0.1em;
+  color: #ff6600; }
+.slides section p, .slides section ol, .slides section ul {
+  line-height: 1.4; }
+.slides section a {
+  color: #ff6600; }
+  .slides section ahover {
+    color: #ff944d;
+    text-decoration: underline; }
+
+/*********************************************
+ * CONTROLS
+ *********************************************/
+.controls .navigate-left {
+  border-right-color: #4a5056 !important; }
+
+.controls .navigate-right {
+  border-left-color: #4a5056 !important; }
+
+.controls .navigate-up {
+  border-bottom-color: #4a5056 !important; }
+
+.controls .navigate-down {
+  border-top-color: #4a5056 !important; }
+
+.progress span {
+  background: #4a5056 !important; }
+
+.controls {
+  display: none;
+  position: fixed;
+  width: 150px;
+  height: 120px;
+  left: 6%;
+  bottom: 0px; }
+
+#reveal .controls a {
+  font-size: 20px;
+  font-family: sans-serif;
+  opacity: 0.1;
+  color: #4a5056;
+  text-align: left;
+  display: block;
+  float: left;
+  top: auto;
+  left: auto;
+  bottom: auto;
+  right: auto;
+  position: static; }
+
+.controls a.enabled {
+  opacity: 0.6;
+  color: #4a5056;
+  text-shadow: 0px 0px 2px rgba(144, 207, 213, 0.3); }
+
+.controls a.enabled:active {
+  margin-top: 1px;
+  opacity: 1; }
+
+.controls .right {
+  top: auto;
+  left: auto;
+  bottom: auto;
+  right: auto; }
+
+.controls .left {
+  top: auto;
+  left: auto;
+  bottom: auto;
+  right: auto; }
+
+.controls .up {
+  top: auto;
+  left: auto;
+  bottom: auto;
+  right: auto; }
+
+.controls .down {
+  top: auto;
+  left: auto;
+  bottom: auto;
+  right: auto; }
+
+.indented {
+  padding-left: 2.5cm; }
+
+.logo {
+  z-index: 10;
+  position: absolute;
+  right: 35px;
+  bottom: 35px;
+  width: 70px;
+  height: 70px;
+  background-repeat: no-repeat;
+  background-image: url("Orange_logo.svg");
+  background-size: 70px 70px; }
+
+/*# sourceMappingURL=orange.css.map */
