--- a/css/theme/template/settings.scss
+++ b/css/theme/template/settings.scss
@@ -1,26 +1,30 @@
 // Base settings for all themes that can optionally be
 // overridden by the super-theme
 
+$orangeFontFamily: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+$orangeTextColor: rgb(255,102,0);
+$interactiveColor: #4a5056;
+
 // Background of the presentation
 $backgroundColor: #2b2b2b;
 
 // Primary/body text
-$mainFont: 'Lato', sans-serif;
+$mainFont: $orangeFontFamily; //'Lato', sans-serif;
 $mainFontSize: 36px;
 $mainColor: #eee;
 
 // Headings
 $headingMargin: 0 0 20px 0;
-$headingFont: 'League Gothic', Impact, sans-serif;
-$headingColor: #eee;
+$headingFont: $orangeFontFamily; //'League Gothic', Impact, sans-serif;
+$headingColor: $orangeTextColor; //#eee;
 $headingLineHeight: 0.9em;
 $headingLetterSpacing: 0.02em;
-$headingTextTransform: uppercase;
+$headingTextTransform: lowercase; // uppercase;
 $headingTextShadow: 0px 0px 6px rgba(0,0,0,0.2);
 $heading1TextShadow: $headingTextShadow;
 
 // Links and actions
-$linkColor: #13DAEC;
+$linkColor: $orangeTextColor; // #13DAEC;
 $linkColorHover: lighten( $linkColor, 20% );
 
 // Text selection
