--- a/css/theme/orange.css
+++ b/css/theme/orange.css
@@ -49,10 +49,10 @@ body {
   line-height: 0.9em;
   letter-spacing: 0.02em;
   text-transform: lowercase;
-  text-shadow: 2px 2px 2px #222; }
+  text-shadow: none; }
 
 .reveal h1 {
-  text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.15); }
+  text-shadow: none; }
 
 /*********************************************
  * LINKS
@@ -155,15 +155,15 @@ body {
 .reveal h4,
 .reveal h5,
 .reveal h6 {
-  font-weight: 700; }
+  text-shadow: none; }
 
 .reveal a:not(.image),
 .reveal a:not(.image):hover {
-  text-shadow: 2px 2px 2px #000; }
+  text-shadow: none; }
 
 .reveal small a:not(.image),
 .reveal small a:not(.image):hover {
-  text-shadow: 1px 1px 1px #000; }
+  text-shadow: none; }
 
 .reveal p code {
   background-color: #23241f;
@@ -273,5 +273,16 @@ body {
   background-repeat: no-repeat;
   background-image: url("Orange_logo.svg");
   background-size: 70px 70px; }
+
+ul.orange {
+  list-style-image: url("Orange_square.svg"); }
+
+.reveal .slide-number {
+  right: 50%;
+  color: #ff6600; }
+
+.reveal span.pointer:before {
+  content: "\FEFF \0020 \25B8 \FEFF \0020";
+  border-left: 5mm; }
 
 /*# sourceMappingURL=orange.css.map */
