--- a/css/theme/orange.css
+++ b/css/theme/orange.css
@@ -285,4 +285,17 @@ ul.orange {
   content: "\FEFF \0020 \25B8 \FEFF \0020";
   border-left: 5mm; }
 
+.reveal table.orange {
+  border-collapse: collapse;
+  margin: 2cm; }
+
+.reveal table.orange,
+.reveal table.orange thead,
+.reveal table.orange thead td,
+.reveal table.orange tr,
+.reveal table.orange tr td {
+  border-width: 1px;
+  border-color: white;
+  padding: 5mm; }
+
 /*# sourceMappingURL=orange.css.map */
