--- a/css/theme/source/orange.scss
+++ b/css/theme/source/orange.scss
@@ -225,7 +225,7 @@ $logoBorder: #{($logoSize / 2)};
   background-size: $logoSize $logoSize;
 }
 
-ul.orange {
+.reveal ul.orange {
   //  list-style-type: square;
   list-style-image: url("Orange_square.svg");
 }
